--- a/StockManagementApp/StockManagementApp.csproj
+++ b/StockManagementApp/StockManagementApp.csproj
@@ -74,13 +74,16 @@
     <Compile Include="BLL\CategoryManager.cs" />
     <Compile Include="BLL\CompanyManager.cs" />
     <Compile Include="BLL\ItemManager.cs" />
+    <Compile Include="BLL\StockInManager.cs" />
     <Compile Include="DAL\Entity\Category.cs" />
     <Compile Include="DAL\Entity\Company.cs" />
     <Compile Include="DAL\Entity\Item.cs" />
+    <Compile Include="DAL\Entity\StockIn.cs" />
     <Compile Include="DAL\Gateway\BaseGateway.cs" />
     <Compile Include="DAL\Gateway\CategoryGateway.cs" />
     <Compile Include="DAL\Gateway\CompanyGateway.cs" />
     <Compile Include="DAL\Gateway\ItemGateway.cs" />
+    <Compile Include="DAL\Gateway\StockInGateway.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\CategoryUI.aspx.cs">
       <DependentUpon>CategoryUI.aspx</DependentUpon>
