--- a/StockManagementApp/StockManagementApp.csproj
+++ b/StockManagementApp/StockManagementApp.csproj
@@ -85,6 +85,7 @@
     <Compile Include="DAL\Gateway\CompanyGateway.cs" />
     <Compile Include="DAL\Gateway\ItemGateway.cs" />
     <Compile Include="DAL\Gateway\StockInGateway.cs" />
+    <Compile Include="DAL\ViewModel\ItemStockInVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\CategoryUI.aspx.cs">
       <DependentUpon>CategoryUI.aspx</DependentUpon>
