--- a/StockManagementApp/StockManagementApp.csproj
+++ b/StockManagementApp/StockManagementApp.csproj
@@ -76,15 +76,19 @@
     <Compile Include="BLL\CompanyManager.cs" />
     <Compile Include="BLL\ItemManager.cs" />
     <Compile Include="BLL\StockInManager.cs" />
+    <Compile Include="BLL\StockOutManager.cs" />
     <Compile Include="DAL\Entity\Category.cs" />
     <Compile Include="DAL\Entity\Company.cs" />
     <Compile Include="DAL\Entity\Item.cs" />
     <Compile Include="DAL\Entity\StockIn.cs" />
+    <Compile Include="DAL\Entity\StockOut.cs" />
+    <Compile Include="DAL\Enum\StockOutType.cs" />
     <Compile Include="DAL\Gateway\BaseGateway.cs" />
     <Compile Include="DAL\Gateway\CategoryGateway.cs" />
     <Compile Include="DAL\Gateway\CompanyGateway.cs" />
     <Compile Include="DAL\Gateway\ItemGateway.cs" />
     <Compile Include="DAL\Gateway\StockInGateway.cs" />
+    <Compile Include="DAL\Gateway\StockOutGateway.cs" />
     <Compile Include="DAL\ViewModel\ItemStockInVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\CategoryUI.aspx.cs">
