--- a/StockManagementApp/StockManagementApp.csproj
+++ b/StockManagementApp/StockManagementApp.csproj
@@ -68,6 +68,7 @@
     <Content Include="UI\CategoryUI.aspx" />
     <Content Include="UI\CompanyUI.aspx" />
     <Content Include="UI\ItemSetupUI.aspx" />
+    <Content Include="UI\SearchAndViewItemUI.aspx" />
     <Content Include="UI\StockInUI.aspx" />
     <Content Include="UI\StockOutUI.aspx" />
     <Content Include="Web.config" />
@@ -112,6 +113,13 @@
     </Compile>
     <Compile Include="UI\ItemSetupUI.aspx.designer.cs">
       <DependentUpon>ItemSetupUI.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="UI\SearchAndViewItemUI.aspx.cs">
+      <DependentUpon>SearchAndViewItemUI.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UI\SearchAndViewItemUI.aspx.designer.cs">
+      <DependentUpon>SearchAndViewItemUI.aspx</DependentUpon>
     </Compile>
     <Compile Include="UI\StockInUI.aspx.cs">
       <DependentUpon>StockInUI.aspx</DependentUpon>
