--- a/StockManagementApp/packages.config
+++ b/StockManagementApp/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="bootstrap" version="4.1.3" targetFramework="net45" />
   <package id="Bootstrap.Datepicker" version="1.8.0" targetFramework="net45" />
+  <package id="font-awesome" version="4.7.0" targetFramework="net45" />
   <package id="jQuery" version="3.3.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net45" />
   <package id="popper.js" version="1.14.3" targetFramework="net45" />
