--- a/StockManagementApp/Web.config
+++ b/StockManagementApp/Web.config
@@ -4,6 +4,10 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+
+    <add name="StockManagementSystemDB" connectionString="Server = DESKTOP-78PMIPM; Database = StockManagementDB; Integrated Security = True"/>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
