--- a/StockManagementApp/packages.config
+++ b/StockManagementApp/packages.config
@@ -5,6 +5,9 @@
   <package id="font-awesome" version="4.7.0" targetFramework="net45" />
   <package id="jQuery" version="3.3.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net45" />
+  <package id="jQuery.Validation" version="1.17.0" targetFramework="net45" />
+  <package id="jquery.validationEngine" version="2.6.2" targetFramework="net45" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.10" targetFramework="net45" />
   <package id="popper.js" version="1.14.3" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="3.0.1.1" targetFramework="net45" />
 </packages>
